--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html>
   <head>
-    <meta http-equiv="refresh" content="0; url=https://your-backend-url.com" />
+    <script>
+      window.location.replace("https://web-production-4b40.up.railway.app/fetch-timetable");
+    </script>
   </head>
   <body>
-    <p>If you are not redirected, <a href="https://web-production-4b40.up.railway.app/fetch-timetable">click here</a>.</p>
   </body>
 </html>
+
